# python_orm

./: .env  .gitignore  .pylintrc  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  database.py  exceptions.py
src/dialects/mysql/: database.py
src/dialects/postgres/: database.py
src/dialects/sqlite/: database.py
src/models/: fields.py  model.py  models.py  query.py
test/: test_vegaorm.py
test/base/: __init__.py  test_model_validation.py
test/dialects/: __init__.py  conftest.py  test_basics.py  test_lazy_eval.py  test_modify_table.py  test_multithreading.py
vegaorm/: __init__.py  database.py  models.py
